# discogs-haskell

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  discogs-haskell.cabal  stack.yaml
src/: Discogs.hs  Main.hs
src/Discogs/: Actions.hs  Login.hs  Routes.hs  Types.hs
src/Discogs/Actions/: Artist.hs  Label.hs  Master.hs  Release.hs  Search.hs
src/Discogs/Routes/: Artist.hs  Label.hs  Master.hs  Release.hs  Search.hs
src/Discogs/Types/: Artist.hs  Discogs.hs  Error.hs  Label.hs  Master.hs  Pagination.hs  Release.hs  SearchResult.hs  User.hs
test/Discogs/Types/: ArtistSpec.hs  ReleaseSpec.hs
test/Discogs/data/: getArtistReleases_example.json  getArtist_example.json  getRelease_example.json
test/data/: getArtist_example.json  getRelease_example.json
