name:                discogs-haskell
version:             0.1.0.0
synopsis:            Client for Discogs REST API
description:         Please see README.md
homepage:            http://github.com/githubuser/discogs-haskell#readme
license:             MIT
license-file:        LICENSE
author:              accraze
maintainer:          accraze@gmail.com
copyright:           2016 accraze
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable discogs-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , wreq
                       , lens
                       , bytestring
